--- a/client/stylesheets/scss/_grid.scss
+++ b/client/stylesheets/scss/_grid.scss
@@ -37,10 +37,10 @@
   .columns {
     margin-left: 2%;
   }
-  // .column:first-child,
-  // .columns:first-child {
+  .column:first-child,
+  .columns:first-child {
     margin-left: 0;
-  // }
+  }
 
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
@@ -59,7 +59,7 @@
   .one-third.column               { width: 30.6666666667%; }
   .two-thirds.column              { width: 65.3333333333%; }
 
-  // .one-half.column                { width: 48%; }
+  .one-half.column                { width: 48%; }
 
   /* Offsets */
   .offset-by-one.column,
