--- a/client/stylesheets/scss/_layout.scss
+++ b/client/stylesheets/scss/_layout.scss
@@ -344,7 +344,7 @@ article.seven {
         position: relative;
         top: -20px;
         background-color: white;
-        margin: 2%;
+        margin-right: 4%;
         z-index: 2;
         .shareBox {
           padding-left: 1.5%;
@@ -386,6 +386,13 @@ footer {
   text-align: center;
   margin: 0 auto;
   width: 300px;
+  .one-half.column {
+    // position: relative;
+    // width: 48%;
+    // margin-right: 2%;
+    // margin-left: 0;
+    // left: -.3em;
+  }
   p {
     margin-bottom: .5em;
   }
